# flexr_feedback

./: .gitignore  README.md
feedback_backend/: main.py  pyproject.toml  requirements.txt  run.sh
feedback_backend/app/: main.py
feedback_backend/app/api/: endpoints.py
feedback_backend/app/core/: config.py  database.py  logger.py  security.py
feedback_backend/app/crud/: crud.py
feedback_backend/app/models/: models.py
feedback_backend/app/schemas/: schemas.py
feedback_backend/app/tests/: test_api.py
feedback_frontend/: index.html  package.json
feedback_frontend/src/: App.tsx
feedback_frontend/src/components/Layout/: MainLayout.tsx
feedback_frontend/src/contexts/: AuthContext.tsx
feedback_frontend/src/pages/: Dashboard.tsx  FeedbackManagement.tsx  Login.tsx  LowSimilarityAnalysis.tsx  NoResultAnalysis.tsx  QALogs.tsx
feedback_frontend/src/services/: api.ts
feedback_frontend/src/types/: index.ts
